# llvm-project

./: .gitignore
clang/include/clang/Basic/: Attr.td  AttrDocs.td
clang/include/clang/jsoncpp/: jsoncpp.cpp
clang/lib/Sema/: SemaDeclAttr.cpp
clang/tools/: CMakeLists.txt
clang/tools/PeregrinePlugin/: CMakeLists.txt  PeregrinePlugin.cpp
clang/tools/clang-peregrine/: CMakeLists.txt  ClangPeregrine.cpp
llvm/: CMakeLists.txt
